--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "script2addresses",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "Transform bitcoin script to bitcoin addresses",
   "keywords": [
     "bitcoin",
@@ -24,38 +24,41 @@
   "main": "./src/index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/fanatid/script2addresses.git"
+    "url": "https://github.com/SmartArray/script2addresses.git"
   },
   "scripts": {
-    "coverage": "istanbul cover _mocha -- test/*.js",
-    "coveralls": "npm run coverage && coveralls <coverage/lcov.info",
+    "coverage": "nyc mocha test/*.js",
+    "coveralls": "npm run coverage && coveralls < coverage/lcov.info",
     "lint": "standard",
     "test": "npm run test:node && npm run test:browser",
     "test:browser": "karma start karma.conf.js",
-    "test:node": "istanbul test mocha -- --reporter spec test/*.js"
+    "test:node": "nyc mocha -- --reporter spec test/*.js"
   },
   "dependencies": {
-    "bs58check": "^1.0.6",
-    "create-hash": "^1.1.2",
-    "secp256k1": "^2.0.5"
+    "bs58check": "^2.1.2",
+    "create-hash": "^1.2.0",
+    "secp256k1": "^3.7.1"
   },
   "devDependencies": {
-    "bitcoinjs-lib": "^2.1.1",
-    "chai": "^3.2.0",
-    "coveralls": "^2.11.3",
-    "elliptic": "^6.0.2",
-    "istanbul": "^0.4.0",
-    "karma": "^0.13.8",
-    "karma-browserify": "^4.3.0",
-    "karma-chrome-launcher": "^0.2.0",
-    "karma-detect-browsers": "^2.0.1",
-    "karma-firefox-launcher": "^0.1.6",
-    "karma-mocha": "^0.2.0",
-    "mocha": "^2.2.5",
-    "standard": "^5.4.1"
+    "bitcoinjs-lib": "^5.0.5",
+    "browserify": "^16.2.3",
+    "chai": "^4.2.0",
+    "coveralls": "^3.0.4",
+    "elliptic": "^6.4.1",
+    "karma": "^4.1.0",
+    "karma-browserify": "^6.0.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-detect-browsers": "^2.2.6",
+    "karma-firefox-launcher": "^1.1.0",
+    "karma-mocha": "^1.3.0",
+    "karma-safari-launcher": "^1.0.0",
+    "mocha": "^6.1.4",
+    "nyc": "^14.1.1",
+    "standard": "^12.0.1",
+    "watchify": "^3.11.1"
   },
   "engines": {
-    "node": ">=0.10"
+    "node": ">=8.0"
   },
   "standard": {
     "globals": [
