--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
   "dependencies": {
     "bs58check": "^2.1.2",
     "create-hash": "^1.2.0",
-    "secp256k1": "^3.7.1"
+    "secp256k1": "^3.7.1",
+    "bech32": "^1.1.3"
   },
   "devDependencies": {
     "bitcoinjs-lib": "^5.0.5",
